@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["hps__is-inventory-sensor"].subgroup = "circuit-input"
+end
